Fix footer text to background contrast

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ footer {
     height: 50px;
     width: 100%;
     background-color: #343a40;
-    color: #9b9b9b;
+    color: #efefef;
     text-align:center;
 }
 .container{
